--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,1 +1,76 @@
+name: Build APK Calculadora
 
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  workflow_dispatch:  # Permite ejecutar manualmente
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.9'
+    
+    - name: Install system dependencies
+      run: |
+        sudo apt update
+        sudo apt install -y \
+          python3-pip \
+          build-essential \
+          git \
+          python3-dev \
+          ffmpeg \
+          libsdl2-dev \
+          libsdl2-image-dev \
+          libsdl2-mixer-dev \
+          libsdl2-ttf-dev \
+          libportmidi-dev \
+          libswscale-dev \
+          libavformat-dev \
+          libavcodec-dev \
+          zlib1g-dev \
+          libgstreamer1.0-0 \
+          gstreamer1.0-plugins-base \
+          gstreamer1.0-plugins-good \
+          libffi-dev
+    
+    - name: Install Python packages
+      run: |
+        pip install --upgrade pip
+        pip install buildozer cython==0.29.19
+    
+    - name: Configure and build APK
+      run: |
+        # Renombrar archivo si es necesario
+        if [ -f "calc_kivy_precalculo.py" ]; then
+          mv calc_kivy_precalculo.py main.py
+        fi
+        
+        # Inicializar buildozer
+        buildozer init
+        
+        # Configurar buildozer.spec
+        sed -i 's/title = My Application/title = Calculadora Matematica/g' buildozer.spec
+        sed -i 's/package.name = myapp/package.name = calculadoramath/g' buildozer.spec
+        sed -i 's/package.domain = org.test/package.domain = com.math.app/g' buildozer.spec
+        sed -i 's/requirements = python3,kivy/requirements = python3,kivy,pillow/g' buildozer.spec
+        sed -i 's/source.include_exts = py/source.include_exts = py,txt/g' buildozer.spec
+        sed -i 's/# android.accept_sdk_license = False/android.accept_sdk_license = True/g' buildozer.spec
+        sed -i 's/# orientation = landscape/orientation = portrait/g' buildozer.spec
+        
+        # Compilar
+        buildozer -v android debug
+    
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: Calculadora-APK
+        path: ./bin/*.apk
