--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # CAMBIADO de 20.04 a latest
+    runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v4
@@ -43,32 +43,61 @@ jobs:
           libffi-dev \
           autoconf \
           automake \
-          libtool
+          libtool \
+          pkg-config \
+          cmake
     
     - name: Install Python packages
       run: |
-        pip install --upgrade pip
-        pip install buildozer cython==0.29.19
+        pip install --upgrade pip setuptools wheel
+        pip install cython==0.29.19
+        pip install buildozer
     
     - name: Debug - List files
-      run: ls -la
+      run: |
+        echo "Contenido del directorio:"
+        ls -la
     
     - name: Configure and build APK
       run: |
+        # Renombrar archivo si es necesario
         if [ -f "calc_kivy_precalculo.py" ]; then
           mv calc_kivy_precalculo.py main.py
         fi
         
+        # Inicializar buildozer
         buildozer init
         
+        # CONFIGURACIÓN OPTIMIZADA
         sed -i 's/title = My Application/title = Calculadora Math/g' buildozer.spec
         sed -i 's/package.name = myapp/package.name = calculadoramath/g' buildozer.spec
         sed -i 's/package.domain = org.test/package.domain = com.math.app/g' buildozer.spec
+        
+        # IMPORTANTE: Solo python3,kivy (sin pillow, sin extras)
         sed -i 's/requirements = python3,kivy/requirements = python3,kivy/g' buildozer.spec
+        
+        # Aceptar licencias
         sed -i 's/# android.accept_sdk_license = False/android.accept_sdk_license = True/g' buildozer.spec
         
-        buildozer -v android debug
-    
+        # ORIENTACIÓN
+        sed -i 's/# orientation = landscape/orientation = portrait/g' buildozer.spec
+        
+        # INCLUIR ARCHIVOS
+        sed -i 's/source.include_exts = py/source.include_exts = py,txt/g' buildozer.spec
+        
+        # VERSIÓN DE ANDROID
+        echo "android.api = 30" >> buildozer.spec
+        echo "android.minapi = 21" >> buildozer.spec
+        echo "android.ndk = 23b" >> buildozer.spec
+        
+        # Mostrar configuración final
+        echo "===== CONFIGURACIÓN ====="
+        grep -E "title|package|requirements|android" buildozer.spec
+        
+        # COMPILAR
+        echo "===== INICIANDO COMPILACIÓN ====="
+        buildozer android debug
+        
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
