--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -1,1 +1,97 @@
 
+name: Build APK Calculadora
+
+on:
+  push:
+    branches: [ "main" ]
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-22.04
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.8'
+    
+    - name: Install system dependencies
+      run: |
+        sudo apt update
+        sudo apt install -y \
+          git wget unzip \
+          python3-pip python3-dev build-essential \
+          libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev \
+          libportmidi-dev libswscale-dev libavformat-dev libavcodec-dev \
+          zlib1g-dev libgstreamer1.0-0 gstreamer1.0-plugins-base \
+          libffi-dev autoconf automake libtool pkg-config openjdk-17-jdk
+    
+    - name: Install Python dependencies
+      run: |
+        pip install --upgrade pip
+        pip install buildozer cython kivy
+    
+    - name: Prepare main.py
+      run: |
+        if [ -f "calc_kivy_precalculo_beta.py" ]; then
+          echo "✅ Encontrado: calc_kivy_precalculo_beta.py"
+          cp calc_kivy_precalculo_beta.py main.py
+          ls -la main.py
+        else
+          echo "❌ Error: No se encuentra calc_kivy_precalculo_beta.py"
+          exit 1
+        fi
+    
+    - name: Create pyjnius patch
+      run: |
+        # Crear estructura de parche
+        mkdir -p .p4a-recipes/pyjnius/patches
+        
+        # Crear el archivo de parche
+        cat > .p4a-recipes/pyjnius/patches/fix-long.patch << 'EOF'
+--- a/jnius/jnius_utils.pxi
++++ b/jnius/jnius_utils.pxi
+@@ -319,8 +319,7 @@
+                 score += 10
+                 continue
+ 
+-        if r == 'S' or r == 'I':
+-            if isinstance(arg, int) or (
+-                    (isinstance(arg, long) and arg < 2147483648)):
++        if (r == 'S' or r == 'I') and isinstance(arg, int):
+                 score += 10
+                 continue
+EOF
+        echo "✅ Parche creado"
+    
+    - name: Configure Buildozer
+      run: |
+        # Inicializar buildozer
+        buildozer init
+        
+        # Configurar buildozer.spec
+        sed -i 's/title = My Application/title = Calculadora Matematica/g' buildozer.spec
+        sed -i 's/package.name = myapp/package.name = calculadoramath/g' buildozer.spec
+        sed -i 's/package.domain = org.test/package.domain = com.math.app/g' buildozer.spec
+        sed -i 's/# android.accept_sdk_license = False/android.accept_sdk_license = True/g' buildozer.spec
+        sed -i 's/# android.ndk = 23b/android.ndk = 25b/g' buildozer.spec
+        sed -i 's/# android.sdk = 24/android.sdk = 30/g' buildozer.spec
+        sed -i 's/^#p4a.local_recipes = .*/p4a.local_recipes = .\/.p4a-recipes/g' buildozer.spec
+        
+        echo "✅ buildozer.spec configurado"
+        grep "p4a.local_recipes" buildozer.spec
+    
+    - name: Build APK
+      run: |
+        echo "🚀 Compilando APK (esto puede tomar 20-30 minutos)..."
+        buildozer -v android debug
+    
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: Calculadora-APK
+        path: ./bin/*.apk
+      if: success()
