--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
 
+# Buildozer
+.buildozer/
+bin/
+*.apk
+*.aab
+
+# Logs and databases
+*.log
+*.db
+historial.txt
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
