--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -50,19 +50,12 @@ jobs:
         pip install cython==0.29.36
         pip install buildozer
 
-    - name: Create requirements.txt
-      run: |
-        echo "kivy==2.3.0" > requirements.txt
-        echo "pyjnius==1.6.0" >> requirements.txt
-
     - name: Build with buildozer
       run: |
-        buildozer init
-        # Modificar buildozer.spec para usar Python 3.11
-        sed -i 's/^requirements = .*/requirements = python3,kivy==2.3.0,pyjnius==1.6.0/' buildozer.spec
-        sed -i 's/^android.ndk = .*/android.ndk = 25b/' buildozer.spec
-        sed -i 's/^android.sdk = .*/android.sdk = 30/' buildozer.spec
-        sed -i 's/^#android.accept_sdk_license = .*/android.accept_sdk_license = True/' buildozer.spec
+        # No ejecutar buildozer init si ya existe buildozer.spec
+        if [ ! -f buildozer.spec ]; then
+          buildozer init
+        fi
         buildozer -v android debug
 
     - name: Upload APK
