Add caching for Android SDK and Buildozer

--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -17,6 +17,16 @@ jobs:
       with:
         python-version: 3.8
     
+    - name: Cache Android SDK and Buildozer
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.buildozer
+          ~/.gradle
+        key: ${{ runner.os }}-buildozer-${{ hashFiles('buildozer.spec') }}
+        restore-keys: |
+          ${{ runner.os }}-buildozer-
+    
     - name: Install system dependencies
       run: |
         sudo apt update
@@ -26,6 +36,7 @@ jobs:
           unzip \
           openjdk-11-jdk \
           python3-pip \
+          python3-dev \
           autoconf \
           libtool \
           pkg-config \
@@ -38,42 +49,76 @@ jobs:
           wget \
           curl
     
-    - name: Install Android SDK
+    - name: Install Android SDK (si no está cacheado)
       run: |
-        # Crear directorios
-        mkdir -p ~/.buildozer/android/platform
-        cd ~/.buildozer/android/platform
-        
-        # Descargar Android SDK command line tools
-        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-        unzip commandlinetools-linux-9477386_latest.zip
-        mkdir -p android-sdk/cmdline-tools
-        mv cmdline-tools android-sdk/cmdline-tools/latest
-        
-        # Configurar variables de entorno
-        echo "export ANDROID_HOME=~/.buildozer/android/platform/android-sdk" >> ~/.bashrc
-        echo "export PATH=\$PATH:\$ANDROID_HOME/cmdline-tools/latest/bin:\$ANDROID_HOME/platform-tools" >> ~/.bashrc
-        source ~/.bashrc
-        
-        # Aceptar licencias
-        yes | ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
-        
-        # Instalar plataformas y build-tools
-        ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3"
+        if [ ! -d ~/.buildozer/android/platform/android-sdk ]; then
+          # Crear directorios
+          mkdir -p ~/.buildozer/android/platform
+          cd ~/.buildozer/android/platform
+          
+          # Descargar Android SDK command line tools
+          wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+          unzip -q commandlinetools-linux-9477386_latest.zip
+          mkdir -p android-sdk/cmdline-tools
+          mv cmdline-tools android-sdk/cmdline-tools/latest
+          
+          # Configurar variables de entorno
+          echo "export ANDROID_HOME=~/.buildozer/android/platform/android-sdk" >> ~/.bashrc
+          echo "export PATH=\$PATH:\$ANDROID_HOME/cmdline-tools/latest/bin:\$ANDROID_HOME/platform-tools" >> ~/.bashrc
+          
+          # Aceptar licencias
+          yes | ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+          
+          # Instalar plataformas y build-tools
+          ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager \
+            "platform-tools" \
+            "platforms;android-31" \
+            "build-tools;30.0.3"
+        else
+          echo "✅ Android SDK ya está cacheado"
+        fi
     
-    - name: Install buildozer
+    - name: Install buildozer and dependencies
       run: |
         pip install --upgrade pip
         pip install buildozer cython==0.29.36
+        
+        # Verificar que buildozer está instalado
+        buildozer --version
+    
+    - name: Create buildozer.spec if not exists
+      run: |
+        if [ ! -f buildozer.spec ]; then
+          buildozer init
+          # Configurar buildozer.spec para tu app
+          sed -i 's/title = My Application/title = Calculadora Educativa/' buildozer.spec
+          sed -i 's/package.name = myapp/package.name = calculadora/' buildozer.spec
+          sed -i 's/package.domain = org.test/package.domain = palmace.github.io/' buildozer.spec
+          sed -i 's/source.include_exts = py,png,jpg,kv,atlas/source.include_exts = py,png,jpg/' buildozer.spec
+          sed -i 's/requirements = python3,kivy/requirements = python3,kivy==2.3.1,cython==0.29.36/' buildozer.spec
+        fi
     
     - name: Build with buildozer
       run: |
         # Verificar que el SDK está instalado
-        ls -la ~/.buildozer/android/platform/
-        buildozer -v android debug
+        ls -la ~/.buildozer/android/platform/ || true
+        
+        # Forzar el uso del SDK correcto
+        export ANDROID_HOME=~/.buildozer/android/platform/android-sdk
+        export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH
+        
+        # Compilar con más memoria para evitar timeouts
+        buildozer -v android debug || {
+          echo "⚠️ Primer intento falló, intentando de nuevo..."
+          # Limpiar caché de compilación
+          rm -rf .buildozer/android/platform/build-*
+          buildozer -v android debug
+        }
     
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
         name: calculadora-apk
         path: bin/*.apk
+        if-no-files-found: error
+        retention-days: 30
